--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,14 @@
   width: 50%;
 }
 
+.headline-text {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  text-align: center;
+}
+
 .Welcome {
   text-align: center;  
   font-size: calc(10px + 2vmin);
