--- a/src/App.css
+++ b/src/App.css
@@ -49,9 +49,10 @@
   color: #61dafb;
 }
 
-@media screen and (min-width: 600px) {
+@media screen and (max-width: 600px) {
   /* USE THESE CLASSES TO HIDE CONTENT ON MOBILE */
  .mobile-hide {
     display: none !important;
  }
 }
+
